Fix: improve error handling tiny chng
Signed-off-by: Pranjali Bhardwaj <pranjalisharma6543@gmail.com>